# RSS

./: .gitignore  README.md  dev.Dockerfile
app/: install.sh  main.js  package-lock.json  package.json  preload.js  start.sh  worker.js
app/addon/: binding.gyp
app/engine_wrapper/include/: NapiWrappers.hpp  addon.hpp
app/engine_wrapper/source/: NapiWrappers.cpp  addon.cpp
app/frontend/: index.html  renderer.js  styles.less
app/frontend/assets/: README.md  styles.css
config/: ball.json  field.json  out_area.json  robot.json
docker scripts/linux/: build.sh  run.sh
docker scripts/windows/: build.ps1  run.ps1
engine/: CMakeLists.txt  main.cpp  rss.cmake
engine/include/: RSS.hpp
engine/include/core/: AABB.hpp  Angle.hpp  Circle.hpp  Collision.hpp  CollisionSimplex.hpp  ConvexShape.hpp  ConvexShapeWrapper.hpp  EPA.hpp  GJK.hpp  Object.hpp  Polygon.hpp  Rect.hpp  Shape.hpp  Simplex.hpp  Vec2.hpp  core.hpp  misc.hpp  outputOverloads.hpp
engine/include/custom/: Environment.hpp  ObservableObject.hpp  ObservableState.hpp  RawControls.hpp  SegmentShape.hpp  custom.hpp
engine/include/env/: World.hpp  env.hpp
engine/source/core/: Angle.cpp  Circle.cpp  Collision.cpp  CollisionSimplex.cpp  ConvexShape.cpp  ConvexShapeWrapper.cpp  EPA.cpp  GJK.cpp  Object.cpp  Polygon.cpp  Rect.cpp  Shape.cpp  Simplex.cpp  Vec2.cpp  outputOverloads.cpp
engine/source/custom/: Environment.cpp  ObservableObject.cpp  ObservableState.cpp  RawControls.cpp  SegmentShape.cpp
engine/source/env/: World.cpp
scripts/: clean.ps1  setup.ps1  start.ps1
